Adds other image

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -24,7 +24,6 @@ background-image: -moz-linear-gradient(
 }
 
 .page {
-	padding: 10px;
 		background: transparent url(../images/bread.png) no-repeat -47px -219px;
 
 }
@@ -767,6 +766,11 @@ div#footer {
 	text-align: center;
 	margin: 10px 0px;
 	margin-top: 20px;
+}
+
+div.whole {
+	background: url(../images/bread_top.png) no-repeat 400px 67px;
+		padding: 10px;
 }
 
 div.share_zone {
