--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -148,12 +148,27 @@ box-shadow: 0px 0px 10px 0px #11162e;*/
 }
 
 #header ul li a.button {
+  background: url('/images/button.png') no-repeat;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  text-shadow: none;
+  color: black;
+  height: 22px;
+  padding: 0 0 0 10px;
 	width: auto;
-	padding: 5px 7px;
 	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
 	box-shadow: none;
 }
+
+#header ul li a.button div{
+  background: url('/images/button.png') no-repeat right;
+  height: 22px;
+  padding: 0 10px 0 0;
+  line-height: 22px;
+}
+
 #header ul li.like {
 	margin-top: 0px;
 	width: 72px;
@@ -982,22 +997,4 @@ div.photo_zone a {
   font-size: 11px;
   opacity: 0.8;
   filter: alpha(opacity=80);
-}
-
-a.button{
-  background: url('/images/button.png') no-repeat;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-  text-shadow: none;
-  color: black;
-  height: 22px;
-  padding: 0 0 0 10px;
-}
-
-a.button div{
-  background: url('/images/button.png') no-repeat right;
-  height: 22px;
-  padding: 0 10px 0 0;
-  line-height: 22px;
 }
