--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -596,12 +596,17 @@ textarea#message_content.text.optional {
     /*box-shadow: 0 1px 2px #aaaaaa;
     -moz-box-shadow: 0 1px 2px #aaaaaa;
     -webkit-box-shadow: 0 1px 2px #aaaaaa;*/
-    background: #1a3559; 
+    /*background: #1a3559; */
     /*background: #3469a8;*/
-    background: -webkit-gradient(linear, left top, left bottom, from(#3469a8), to(#1a3559));
+    /*background: -webkit-gradient(linear, left top, left bottom, from(#3469a8), to(#1a3559));
     background: -moz-linear-gradient(-90deg, #1a3559, #3469a8);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#1a3559, endColorstr=#3469a8);
-    -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#1a3559, endColorstr=#3469a8);
+    -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#1a3559, endColorstr=#3469a8);*/
+    background-color: #2d61a7; 
+    background: -webkit-gradient(linear, left top, left bottom, from(#5c7ca6), to(#2d61a7));
+    background: -moz-linear-gradient(-90deg, #5c7ca6, #3469a8);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#2d61a7, endColorstr=#5c7ca6);
+    -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#2d61a7, endColorstr=#5c7ca6);
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
