--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -170,7 +170,7 @@ box-shadow: 0px 0px 10px 0px #11162e;*/
 }
 
 #header ul li.like {
-	margin-top: 0px;
+	margin-top: 1px;
 	width: 72px;
 }
 
@@ -247,8 +247,8 @@ div#logo h1 {
 }
 div#logo h1 a {
 	/*float: left;*/
-	width: 150px;
-	height: 23px;
+	width: 220px;
+	height: 30px;
 	display: block;
 	text-indent: -9999px;
 	background: url(../images/logo_bbva.png) no-repeat;
@@ -262,9 +262,9 @@ h2#contest_logo {
 h2#contest_logo a {
 	float: left;
 	background-image: url(../images/logo_concurso.png);
-	height: 115px;
+	height: 105px;
 	text-indent: -9999px;
-	width: 190px;
+	width: 160px;
 	margin-bottom: 15px;
 	margin-left: 10px;
 	
@@ -623,14 +623,15 @@ textarea#message_content.text.optional {
 	margin-right: 10px;	
 	padding: 2px 8px;
 	font-size: 10px;
-	background-color: #555;
+	background-color: #5c83ae;
+	/*background-color: #293f56;*/
 	color: #e4e8e8;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px
-	-webkit-box-shadow: inset 1px 1px 1px #000;
-	-moz-box-shadow: inset 1px 1px 1px #00000;
-	box-shadow: inset 0px 1px 1px 0px #000;
+	-webkit-box-shadow: inset 1px 1px 1px #293f56;
+	-moz-box-shadow: inset 1px 1px 1px #293f56;
+	box-shadow: inset 0px 1px 1px 0px #293f56;
 	margin-top: 0px !important;
 	margin-right: 0px;
 	font-weight: bold;
@@ -755,18 +756,18 @@ div.message {
 	margin-right: 10px;
 	width: 180px;
 	width: 155px;
-	-webkit-box-shadow: 0px 0px 8px 1px #c1c1c1;
+	-webkit-box-shadow: 0px 0px 15px 11px #5c83ae;
 	/*#ccd6e3*/
-  -moz-box-shadow: 0px 0px 8px 1px #c1c1c1;
-  box-shadow: 0px 0px 8px 1px #c1c1c1;
+  -moz-box-shadow: 0px 0px 8px 1px #5c83ae;
+  box-shadow: 0px 0px 11px 0px #5c83ae;
 	/*background-color: #ccd6e3;*/
 	/*background-color: #eef6fb;*/
 	
 	list-style-type: none;
 	margin-bottom: 20px;
 	overflow: hidden;
-	background-color: #323333;
   position: relative;
+	background: #456fa6 url(../images/background.png) no-repeat 0 center;
 }
 
 #footer a.button {
@@ -780,7 +781,7 @@ div.main {
 div#footer {
 	text-align: center;
 	margin: 10px 0px;
-	margin-top: 20px;
+	margin-top: 16px;
 }
 
 div.whole {
@@ -791,7 +792,7 @@ div.whole {
 div.share_zone {
 	padding: 5px 5px;
 	padding-left: 6px;
-	background-color: #404040;
+	background-color: #2c5a91;
 	font-size: 12px;
 	overflow: auto;
 	text-transform: capitalize;
@@ -800,6 +801,7 @@ div.share_zone a {
 	color: white;
 	text-decoration: none;
 	font-family: Arial, Helvetica, Geneva, sans-serif;
+	font-size: 11px;
 }
 
 div.share_zone a:hover {
@@ -862,9 +864,7 @@ div.meta_data {
 
 .message input#vote_submit.button,
 a.button {
-	background-color: #2d61a7; 
-    background: -webkit-gradient(linear, left top, left bottom, from(#5c7ca6), to(#2d61a7));
-    background: -moz-linear-gradient(-90deg, #5c7ca6, #3469a8);
+	background-color: #005396;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#2d61a7, endColorstr=#5c7ca6);
     -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#2d61a7, endColorstr=#5c7ca6);
 	margin-right: 0px;
