--- a/app/views/messages/show.html.haml
+++ b/app/views/messages/show.html.haml
@@ -28,6 +28,7 @@
       .content
         = simple_format @message.content
 
+  %h3.comments Deja tus comentarios
   #fb-root{:style => "display:block;clear:both"}
   %script{:src => "http://connect.facebook.net/en_US/all.js#xfbml=1"}
   %fb:comments{:href => message_url(@message), :num_posts => "10", :width => "500"}
