--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,13 +17,13 @@
             %h2#contest_logo
               = link_to "Concurso Más bueno que el Pan", root_path
           %ul
-            %li
-              %a{:href => add_messages_path, :class => "button"}
-                %div
-                  Sube tu receta
             %li.like
               :erb
                 <div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=171113506293961&amp;xfbml=1"></script><fb:like href="http://alpha-kato.heroku.com" send="false" layout="button_count" width="60" show_faces="false" font=""></fb:like>
+            %li
+              %a{:href => add_messages_path, :class => "button"}
+                Sube tu receta
+
         .wrapper
           / %p.notice= notice
           / %p.alert= alert
@@ -42,7 +42,7 @@
               .additional
                 = link_to "Ver todos", messages_path, :class=> "button"
         #footer
-          = link_to "Términos y condiciones del concurso", terms_path, :class => "button"
+          = link_to "Términos y condiciones del concurso", terms_path, :class => "terms_button"
     %script{:src => "http://connect.facebook.net/en_US/all.js"}
     :javascript
 
