--- a/app/views/messages/new.html.haml
+++ b/app/views/messages/new.html.haml
@@ -1,10 +1,3 @@
 %h1 Participa y envíanos tu receta
 
-= simple_form_for @message, :html =>{:multipart => true} do |f|
-  = f.input :title, :label => false
-  = f.input :ingredients, :label => "Ingredientes"
-  = f.input :photo, :label => "Sube la mejor foto de tu receta"
-  = f.input :content, :label => "¿Cómo se prepara?"
-
-  = f.input :user_id, :as => :hidden, :value => current_user.id if current_user
-  = f.submit 'Enviar receta'
+= render "form"
