--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -54,6 +54,7 @@ div.message_content {
 	overflow: auto;	
 	/*padding-left: 20px;*/
 	margin-bottom: 20px;
+	padding-left: 4px;
 }
 
 div.ingredients {
@@ -122,6 +123,7 @@ box-shadow: 0px 0px 10px 0px #becade;
 
 #header ul {
 	float: right;
+	margin-top: 0px;
 }
 
 div.video video,
@@ -132,7 +134,7 @@ div.video iframe {
 }
 
 #header ul li {
-	float: left;
+	/*float: left;*/
 	font-size: 11px;
 	margin-right: 0px;
 	list-style: none;
@@ -148,22 +150,23 @@ box-shadow: 0px 0px 10px 0px #11162e;*/
 }
 
 #header ul li a.button {
-  background: url('/images/button.png') no-repeat;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-  text-shadow: none;
-  color: black;
-  height: 22px;
-  padding: 0 0 0 10px;
+  /*background: url('/images/button.png') no-repeat;*/
+  /*-webkit-border-radius: 0;
+  -moz-border-radius: 0;*/
+  /*border-radius: 0;
+  text-shadow: none;*/
+  /*color: white;*/
+  /*height: 22px;*/
+  /*padding: 0 0 0 10px;*/
 	width: auto;
 	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
 	box-shadow: none;
+	margin-top: ;
 }
 
 #header ul li a.button div{
-  background: url('/images/button.png') no-repeat right;
+  /*background: url('/images/button.png') no-repeat right;*/
   height: 22px;
   padding: 0 10px 0 0;
   line-height: 22px;
@@ -171,14 +174,16 @@ box-shadow: 0px 0px 10px 0px #11162e;*/
 
 #header ul li.like {
 	margin-top: 1px;
-	width: 72px;
+	text-align: right;
+	/*width: 72px;*/
 }
 
-#header ul li.like iframe {
-	width: 200px;
+
+#header ul li.like {
+	width: auto;
 }
 
-label.optional {
+label {
 	display: block;
 	font-family: Arial, Helvetica, Geneva, sans-serif;
 	margin-bottom: 5px;
@@ -203,6 +208,7 @@ h3 {
 
 h3.comments {
 	margin-bottom: 10px;	
+	padding-left: 4px;
 }
 
 div.terms {
@@ -301,7 +307,7 @@ h2#contest_logo a:hover {
 
 p.description {
 	color: #808080;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 	margin-top: 10px;
 }
 
@@ -407,6 +413,10 @@ form {
   /* Nested Fieldsets and Legends */
   /* Text Fields */
   /* Buttons */ }
+ form {
+	margin: 0px;
+	padding: 0px;
+}
   form ul, form ol, form li, form fieldset, form legend, form input, form textarea, form select, form p {
     margin: 0;
     padding: 0; }
@@ -636,15 +646,15 @@ textarea#message_content.text.optional {
 	margin-right: 10px;	
 	padding: 2px 8px;
 	font-size: 10px;
-	background-color: #5c83ae;
-	/*background-color: #293f56;*/
-	color: #e4e8e8;
+	background-color: #d3c5b4;
+	/*background-color: #92887c;*/
+	color: #5f6060;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px
-	-webkit-box-shadow: inset 1px 1px 1px #293f56;
-	-moz-box-shadow: inset 1px 1px 1px #293f56;
-	box-shadow: inset 0px 1px 1px 0px #293f56;
+	-webkit-box-shadow: inset 1px 1px 1px #92887c;
+	-moz-box-shadow: inset 1px 1px 1px #92887c;
+	box-shadow: inset 0px 1px 1px 0px #92887c;
 	margin-top: 0px !important;
 	margin-right: 0px;
 	font-weight: bold;
@@ -769,10 +779,10 @@ div.message {
 	margin-right: 10px;
 	width: 180px;
 	width: 155px;
-	-webkit-box-shadow: 0px 0px 15px 11px #5c83ae;
+	-webkit-box-shadow: 0px 0px 5px 1px #92887c;
 	/*#ccd6e3*/
-  -moz-box-shadow: 0px 0px 8px 1px #5c83ae;
-  box-shadow: 0px 0px 11px 0px #5c83ae;
+  -moz-box-shadow: 0px 0px 5px 0px #5c83ae;
+  box-shadow: 0px 0px 5px 0px #92887c;
 	/*background-color: #ccd6e3;*/
 	/*background-color: #eef6fb;*/
 	
@@ -780,7 +790,31 @@ div.message {
 	margin-bottom: 20px;
 	overflow: hidden;
   position: relative;
-	background: #456fa6 url(../images/background.png) no-repeat 0 center;
+	background-color: #ffefda;
+}
+body.list ul#messages_list {
+	padding-bottom: 0px;
+}
+body.list ul li.message {
+	margin-right: 20px !important;
+}
+
+div.pagination {
+	text-align: center;
+	font: 12px Arial, Helvetica, Geneva, sans-serif;
+	margin-bottom: 6px;
+}
+
+span.disabled {
+	color: #838383;
+}
+
+.pagination em {
+	color: #afa395;
+}
+
+.pagination a {
+	color: #4a72a7;
 }
 
 #footer a.button {
@@ -794,7 +828,7 @@ div.main {
 div#footer {
 	text-align: center;
 	margin: 10px 0px;
-	margin-top: 16px;
+	margin-top: 10px;
 }
 
 div.whole {
@@ -805,13 +839,22 @@ div.whole {
 div.share_zone {
 	padding: 5px 5px;
 	padding-left: 6px;
-	background-color: #2c5a91;
+	/*background-color: #2c5a91;*/
 	font-size: 12px;
 	overflow: auto;
 	text-transform: capitalize;
+	background-color: #afa395;
+	color: #9e9e9e;
+}
+
+body.list div.content_list {
+	border: none;
+	width: auto;
+	margin-right: 0px;
+	padding-right: 0px;
 }
 div.share_zone a {
-	color: white;
+	color: #5f474d;
 	text-decoration: none;
 	font-family: Arial, Helvetica, Geneva, sans-serif;
 	font-size: 11px;
@@ -893,7 +936,7 @@ a.button {
       font-weight: bold;
 	  font-size: 10px;
 	color: white;
-	margin-top: 1px;
+	/*margin-top: 1px;*/
 
 }
 
@@ -937,8 +980,8 @@ a.media {
 }
 
 .inner #messages_list {
-	margin-top: 10px;
-	padding: 10px 4px;
+	margin-top: 0px;
+	padding: 0px 4px;
 	padding-bottom: 0px;
 	width: 490px;
 }
@@ -997,17 +1040,28 @@ div.photo_zone a {
 	z-index: 50;
   top:0;
   left:0;
-	background: black !important;
+	background: #576c8e;
+	/*background: #39475f;*/	
 	color:white;
 	text-align: center;
 	padding: 5px;
 	border-radius:5px;
 	-moz-border-radius:5px;
 	-webkit-border-radius:5px;
-  -webkit-box-shadow: 0px 0px 8px 1px #000;
-  -moz-box-shadow: 0px 0px 8px 1px #000;
-  box-shadow: 0px 0px 8px 1px #000;
+  -webkit-box-shadow: 0px 0px 5px 1px #39475f;
+  -moz-box-shadow: 0px 0px 5px 1px #39475f;
+  box-shadow: 0px 0px 5px 1px #39475f;
   font-size: 11px;
   opacity: 0.8;
-  filter: alpha(opacity=80);
+  filter: alpha(opacity=90);
+}
+
+#footer a.terms_button {
+	font: 11px Arial, Helvetica, Geneva, sans-serif;
+	color: #214877;
+}
+
+.pagination a:hover {
+	background-color: transparent;
+	color: black;
 }
