--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -1003,6 +1003,7 @@ div.how_to {
 }
 
 .ingredients p,
+div.ingredients .content li,
 .how_to p {
 	/*margin-left: 35px;*/
 	font-size: 12px;
@@ -1010,6 +1011,14 @@ div.how_to {
 	color: #727272;
 }
 
+.ingredients ul {
+	padding-left: 5px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+.ingredients ul li {
+	list-style-position: inside;
+}
 div.section_header {
 	margin-top: 15px;
 }
