--- a/app/views/messages/add.html.haml
+++ b/app/views/messages/add.html.haml
@@ -1,7 +1,7 @@
 %h1 Participa y envíanos tu receta
 
 = simple_form_for @message, :url => verify_messages_path ,:html =>{:multipart => true} do |f|
-  - if flash[:notice]
-    .flash= flash[:notice]
+  - if flash[:not_found]
+    .flash= flash[:not_found]
   = f.input :dni, :label => "Número de DNI"
   = f.submit 'Siguiente'
