Adds link to Cuenta ganadora

--- a/app/views/messages/add.html.haml
+++ b/app/views/messages/add.html.haml
@@ -5,3 +5,7 @@
     .flash= flash[:not_found]
   = f.input :dni, :label => "Número de DNI"
   = f.submit 'Siguiente'
+
+.info
+  Para participar debes contar con una Cuenta Ganadora del BBVA Continental.
+  = link_to "Entérate cómo adquirirla aquí", "http://bbvacontinental.pe/tlpu/jsp/pe/esp/paratiN/depositos/cahorro/ahorrsupdep/index.jsp"
