--- a/app/views/messages/_message_data.html.haml
+++ b/app/views/messages/_message_data.html.haml
@@ -1,6 +1,10 @@
 .vote_count
   = message_data.votes_count
 .submit
+  / - @current_user = User.first
   = simple_form_for Vote.new(:message_id => message_data.id), :remote => true do |f|
     = f.input :message_id, :as => :hidden
-    = f.button :submit, "Votar"
+    -if current_user && Vote.where(:user_id => current_user.id, :message_id => message_data.id).all.empty?
+      = f.button :submit, "Votar"
+    - else
+      = f.button :submit, "Votar", :disabled => true, :class => "disabled"
