--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -273,6 +273,7 @@ div.info {
 	color: #808080;
 	margin-top: 20px;
 }
+
 h2#contest_logo {
 	overflow: auto;
 	margin-bottom: 0px;
@@ -1140,4 +1141,12 @@ div.info a {
 
 div.info a:hover {
 	background-color: transparent;
+}
+
+input#vote_submit.button.disabled {
+	background-color: #a2a2a2 !important;
+	background: none;
+	  box-shadow: inset 0 1px 1px #c1c1c1;
+    -moz-box-shadow: inset 0 1px 4px #c1c1c1;
+    -webkit-box-shadow: inset 1 1px 1px #c1c1c1;
 }
