--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,9 +30,7 @@
           .main
             .content_list
               %p.description
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco.
+                Bienvenido al Concurso Más Bueno que el Pan. Un concurso de recetas inspiradas en el pan. Envíanos tu creación original y participa de este delicioso concurso.
 
               = yield
             .sidebar
