Adds link target to blank

--- a/app/views/messages/add.html.haml
+++ b/app/views/messages/add.html.haml
@@ -8,4 +8,4 @@
 
 .info
   Para participar debes contar con una Cuenta Ganadora del BBVA Continental.
-  = link_to "Entérate cómo adquirirla aquí", "http://bbvacontinental.pe/tlpu/jsp/pe/esp/paratiN/depositos/cahorro/ahorrsupdep/index.jsp"
+  = link_to "Entérate cómo adquirirla aquí", "http://bbvacontinental.pe/tlpu/jsp/pe/esp/paratiN/depositos/cahorro/ahorrsupdep/index.jsp", :target => "_blank"
