--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -19,13 +19,14 @@ background-image: -moz-linear-gradient(
 );*/
 
 	margin: 0px;
-	background: transparent url(../images/background.png) -19px top;
+	/*background: transparent url(../images/background.png) -19px top;*/
+  background: transparent url(../images/background.png);
 	padding: 0px;
 }
 
 .page {
-		background: transparent url(../images/bread.png) no-repeat -207px 12px;
-
+		/*background: transparent url(../images/bread.png) no-repeat -207px 12px;*/
+  background: transparent url(../images/bread.png) no-repeat;
 }
 
 /*html {
@@ -47,7 +48,7 @@ div.content_list {
 	width: 510px;
 	padding-right: 6px;
 	margin-right: 18px;
-	border-right: 1px solid #e8e8e8;
+	border-right: 1px solid #c9c9c9;
 }
 
 div.message_content {
@@ -125,6 +126,10 @@ box-shadow: 0px 0px 10px 0px #becade;
 	float: right;
 	margin-top: 0px;
 	padding: 0px;
+}
+
+div.video{
+  border-bottom: solid 1px #C9C9C9;
 }
 
 div.video video,
@@ -263,7 +268,7 @@ div#logo h1 a {
 	height: 28px;
 	display: block;
 	text-indent: -9999px;
-	background: url(../images/logo_bbva.png) no-repeat -9px -9px;
+	background: url(../images/logo_bbva.png) no-repeat;
 	overflow: hidden;
 
 }
@@ -281,11 +286,11 @@ h2#contest_logo {
 h2#contest_logo a {
 	float: left;
 	background-image: url(../images/logo_concurso.png);
-	height: 96px;
+	height: 125px;
 	text-indent: -9999px;
-	width: 160px;
-	margin-bottom: 15px;
-	margin-top: 15px;
+	width: 186px;
+  margin-top:0;
+  margin-bottom:0;
 	
 }
 
@@ -871,12 +876,15 @@ div.whole {
 div.share_zone {
 	padding: 5px 5px;
 	padding-left: 6px;
+  padding-bottom: 4px;
 	/*background-color: #2c5a91;*/
+  background: url(/images/share_background.png) no-repeat;
 	font-size: 12px;
 	overflow: auto;
 	text-transform: capitalize;
-	background-color: #d9d0c1;
-	color: #9e9e9e;
+	/*background-color: #d9d0c1;
+	color: #9e9e9e;*/
+  color:white;
 }
 
 body.list div.content_list {
@@ -886,7 +894,8 @@ body.list div.content_list {
 	padding-right: 0px;
 }
 div.share_zone a {
-	color: #5f474d;
+	/*color: #5f474d;*/
+  color: white;
 	text-decoration: none;
 	font-family: Arial, Helvetica, Geneva, sans-serif;
 	font-size: 11px;
@@ -1154,7 +1163,7 @@ a#new_message, a.remove_message{
   border-radius: 5px;
 }
 
-.message input#vote_submit.button{
+/*.message input#vote_submit.button{
   background-color: #F16529; 
   background: -webkit-gradient(linear, left top, left bottom, from(#FF8044), to(#F16529));
   background: -moz-linear-gradient(-90deg, #FF8044, #F16529);
@@ -1164,7 +1173,7 @@ a#new_message, a.remove_message{
     -moz-box-shadow: inset 0 1px 4px #F16529;
     -webkit-box-shadow: inset 1 1px 1px #F16529;
 }
-
+*/
 div.info a {
 	color: #0352a7;
 	font-weight: bold;
@@ -1192,4 +1201,10 @@ input#vote_submit.button.disabled {
   margin:0 5px;
   float:right;
   font-size:1.0em;
+}
+
+.additional{
+  display:block;
+  background: url(/images/see_all_background.png) no-repeat center center;
+  padding:24px 0;
 }
