--- a/public/assets/app.css
+++ b/public/assets/app.css
@@ -205,6 +205,7 @@ box-shadow: 0px 0px 10px 0px #becade;
 }
 
 div.video{
+  padding-bottom: 10px;
   border-bottom: solid 1px #C9C9C9;
 }
 
@@ -759,9 +760,11 @@ textarea#message_content.text.optional {
 	margin-right: 10px;	
 	padding: 2px 8px;
 	font-size: 10px;
-	background-color: #f2e7d7;
+	/*background-color: #f2e7d7;*/
 	/*background-color: #92887c;*/
-	color: #5f6060;
+  background-color: #8b857f;
+	/*color: #5f6060;*/
+	color: #fefefe;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px
