--- a/public/assets/app.css
+++ b/public/assets/app.css
@@ -96,7 +96,7 @@ background-image: -moz-linear-gradient(
 
 	margin: 0px;
 	/*background: transparent url(../images/background.png?1312332283) -19px top;*/
-  background: transparent url(../images/background.png?1312332283);
+  background: #cfd8e6 url(../images/background.png?1312332283) repeat-x;
 	padding: 0px;
 }
 
@@ -123,7 +123,9 @@ div.content_list {
 	float: left;
 	width: 510px;
 	padding-right: 6px;
-	margin-right: 18px;
+  padding-top: 10px;
+	/*margin-right: 18px;*/
+  margin-right:0;
 	border-right: 1px solid #c9c9c9;
 }
 
@@ -168,7 +170,10 @@ div.inner div.tipsy {
 div.sidebar {
 	float: left;
 	width: 165px;
-	padding-top: 10px;
+  min-height: 970px;
+	padding-top: 20px;
+  padding-left: 18px;
+  background: url(/images/sidebar_background.png?1312339660) repeat-y;
 }
 div.input {
 	width: 500px;
@@ -190,7 +195,7 @@ textarea.text {
 box-shadow: 0px 0px 10px 0px #becade;
 	background-color: white;
 	overflow: auto;
-	padding: 10px;
+	padding: 0 10px;
 	padding-left: 20px;
 	clear: both;
 	width: 710px;
@@ -328,6 +333,8 @@ box-shadow: 0px 0px 10px 0px #11162e;*/
 	/*text-indent: -9999px;*/
 	/*margin-bottom: 10px;*/
 	float: left;
+  margin-left: 19px;
+  margin-top: 14px;
 }
 div#logo h1 {
 	overflow: auto;
@@ -363,17 +370,17 @@ h2#contest_logo {
 h2#contest_logo a {
 	float: left;
 	background-image: url(../images/logo_concurso.png?1312333365);
-	height: 125px;
+	height: 115px;
 	text-indent: -9999px;
 	width: 186px;
-  margin-top:0;
+  margin-top:6px;
   margin-bottom:0;
 	
 }
 
 #contest_logo a {
-	margin-left: 25px;
-	margin-top: 5px;
+	margin-left: 15px;
+	margin-top: 0;
 }
 h2#contest_logo a:hover {
 	background-color: transparent;
@@ -957,7 +964,7 @@ div.share_zone {
 	padding-left: 6px;
   padding-bottom: 4px;
 	/*background-color: #2c5a91;*/
-  background: url(/images/share_background.png?1312332311) no-repeat;
+  background: url(/images/share_background.png?1312332311) repeat-x;
 	font-size: 12px;
 	overflow: auto;
 	text-transform: capitalize;
@@ -1036,6 +1043,7 @@ div.photo_zone {
 div.meta_data {
 	padding: 5px 5px;
 	overflow: auto;
+  background: url(/images/meta_data_background.png?1312338590) repeat-x;
 }
 
 .message input#vote_submit.button,
@@ -1287,5 +1295,9 @@ input#vote_submit.button.disabled {
 .additional{
   display:block;
   background: url(/images/see_all_background.png?1312334158) no-repeat center center;
-  padding:24px 0;
+  padding:25px 0;
+}
+
+.inner .share_zone{
+  padding-bottom: 7px;
 }
