Agregar boton de inicio y numero de expediente

--- a/app/views/home/terms.html.haml
+++ b/app/views/home/terms.html.haml
@@ -11,3 +11,4 @@
       %li Se entregará un único premio de US$ 5,000.
       %li Cliente firmará acta de entrega del dinero.
       %li En caso un ganador resida en alguna ciudad de provincia, el banco le reembolsará US$ 500 a su cuenta ganadora para que pueda cubrir los gastos de transporte, hospedaje y otros gastos vinculados para venir a Lima a la final de Mistura. Antes que el banco le haga el depósito del dinero, el finalista deberá de firmar un acta de compromiso donde se compromete a utilizar debidamente el dinero entregado.
+    %p N° de expediente: 2011-0279021
