--- a/app/views/layouts/open_graph.html.haml
+++ b/app/views/layouts/open_graph.html.haml
@@ -24,8 +24,11 @@
               :erb
                 <div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=171113506293961&amp;xfbml=1"></script><fb:like href="http://alpha-kato.heroku.com" send="false" layout="button_count" width="60" show_faces="false" font=""></fb:like>
             %li
-              %a{:href => add_messages_path, :class => "button"}
-                Sube tu receta
+              %ul
+                %li
+                  %a{:href => add_messages_path, :class => "button"} Sube tu receta
+                %li
+                  %a{:href => root_path, :class => "button"} Inicio
         .wrapper
           / %p.notice= notice
           / %p.alert= alert
