--- a/app/views/layouts/messages_list.html.haml
+++ b/app/views/layouts/messages_list.html.haml
@@ -23,11 +23,9 @@
             %li
               %ul
                 %li
-                  %a{:href => add_messages_path, :class => "button"}
-                    Sube tu receta
+                  %a{:href => root_path, :class => "button"} Inicio
                 %li
-                  %a{:href => root_path, :class => "button"}
-                    Inicio
+                  %a{:href => add_messages_path, :class => "button"} Sube tu receta
         .wrapper
           / %p.notice= notice
           / %p.alert= alert
