--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,7 @@
+%p.description
+  Bienvenido a nuestro concurso de recetas donde podrás demostrar todo lo que se puede hacer con el pan utilizándolo como ingrediente estrella. Sube tu  mejor receta y obtén la mayor cantidad de votos para llegar a la gran final de Mistura.
+%p.description
+  Para participar sólo debes tener una cuenta ganadora.
 .video
   :erb
     <iframe width="425" height="349" src="http://www.youtube.com/embed/r_WERPN8KO8"; frameborder="0" allowfullscreen></iframe>
