--- a/app/views/layouts/messages_list.html.haml
+++ b/app/views/layouts/messages_list.html.haml
@@ -16,8 +16,9 @@
           / %p.alert= alert
           .main
             .content_list
+              %h1 Estas son las recetas más buenas que el pan
               %p.description
-                Bienvenido al Concurso Más Bueno que el Pan. Un concurso de recetas inspiradas en el pan. Envíanos tu creación original y participa de este delicioso concurso.
+                Vota por tu receta de pan favorita y ayuda a nuestro jurado a escoger a los 5 finalistas que participar&aacute;n en la Gran Final de Mistura.
               = yield
         #footer
           = link_to "Términos y condiciones del concurso", terms_path, :class => "terms_button"
