--- a/app/views/messages/new.html.haml
+++ b/app/views/messages/new.html.haml
@@ -1,3 +1,5 @@
-%h1 Participa y envíanos tu receta
+%h1 Sube tu receta
+
+%p.description Ponle nombre a tu receta, detalla los ingredientes y sube la mejor foto de ella.
 
 = render "form"
