--- a/app/views/messages/add.html.haml
+++ b/app/views/messages/add.html.haml
@@ -1,7 +1,7 @@
-%h1 Participa y envíanos tu receta
+%h1 Sube tu receta
 
 .info
-  Para participar debes contar con una Cuenta Ganadora del BBVA Continental.
+  Coloca tu número de DNI para poder subir tu receta. Recuerda que debes tener una Cuenta Ganadora para participar.
   = link_to "Entérate cómo adquirirla aquí", "http://bbvacontinental.pe/tlpu/jsp/pe/esp/paratiN/depositos/cahorro/ahorrsupdep/index.jsp", :target => "_blank"
 
 = simple_form_for @message, :url => verify_messages_path ,:html =>{:multipart => true} do |f|
