--- a/app/views/messages/add.html.haml
+++ b/app/views/messages/add.html.haml
@@ -6,6 +6,6 @@
 
 = simple_form_for @message, :url => verify_messages_path ,:html =>{:multipart => true} do |f|
   - if flash[:not_found]
-    .flash= flash[:not_found]
+    .flash= raw flash[:not_found]
   = f.input :dni, :label => "Número de DNI"
   = f.submit 'Siguiente'
