Terminos y condiciones, quitar el pan (U)

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,15 @@
 %p.description
-  Bienvenido a nuestro concurso de recetas donde podrás demostrar todo lo que se puede hacer con el pan utilizándolo como ingrediente estrella. Sube tu  mejor receta y obtén la mayor cantidad de votos para llegar a la gran final de Mistura.
-%p.description
-  Para participar sólo debes tener una cuenta ganadora.
+  %strong Cuenta Ganadora
+  presenta el
+  %strong Primer Concurso Más Bueno Que El Pan.
+  Sube tu
+  %strong receta
+  que tenga al
+  %strong pan como protagonista
+  y puedes
+  %strong ganar $ 5, 000 dólares.
+  Además, vive la experiencia de
+  %strong cocinar en la Final de la Feria Mistura.
 .video
   :erb
     <iframe width="425" height="349" src="http://www.youtube.com/embed/r_WERPN8KO8"; frameborder="0" allowfullscreen></iframe>
