--- a/public/assets/app.css
+++ b/public/assets/app.css
@@ -1299,3 +1299,7 @@ input#vote_submit.button.disabled {
   background: url(/images/see_all_background.png?1312334158) no-repeat center center;
   padding:25px 0;
 }
+
+.fb_iframe_widget{
+  text-align: center !important;
+}
