--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -1223,3 +1223,7 @@ input#vote_submit.button.disabled {
   background: url(/images/see_all_background.png) no-repeat center center;
   padding:25px 0;
 }
+
+.fb_iframe_widget{
+  text-align: center !important;
+}
