--- a/public/assets/app.css
+++ b/public/assets/app.css
@@ -1301,5 +1301,6 @@ input#vote_submit.button.disabled {
 }
 
 .fb_iframe_widget{
+  display: block !important;
   text-align: center !important;
 }
