--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -1225,5 +1225,6 @@ input#vote_submit.button.disabled {
 }
 
 .fb_iframe_widget{
+  display: block !important;
   text-align: center !important;
 }
