Changes video to image

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -11,8 +11,7 @@
   Además, vive la experiencia de
   %strong cocinar en la Final de la Feria Mistura.
 .video
-  :erb
-    <iframe width="425" height="349" src="http://www.youtube.com/embed/r_WERPN8KO8"; frameborder="0" allowfullscreen></iframe>
+  = image_tag "video.jpg", :width => 
 
 .section_header
   %h3.left Las últimas recetas
