--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -11,7 +11,7 @@
   Además, vive la experiencia de
   %strong cocinar en la Final de la Feria Mistura.
 .video
-  = image_tag "video.jpg", :width => 
+  = image_tag "video.jpg", :width => "425"
 
 .section_header
   %h3.left Las últimas recetas
