Quitar borde rojo y cambio en terminos y condiciones

--- a/app/views/home/terms.html.haml
+++ b/app/views/home/terms.html.haml
@@ -15,5 +15,5 @@
       %li En caso algún finalista resida en alguna ciudad de provincia, el banco le abonará a su cuenta ganadora US$ 500 para cubrir los gastos de transporte y estadía para asistir a la final en la feria Mistura 2011. Para hacer efectivo dicho abono, el cliente deberá acercarse a la oficina de su localidad donde abrió su cuenta ganadora hasta el 12 de setiembre 2011. En esa oportunidad suscribirá un acta en la que se compromete a asistir a la final del concurso.
       %li De no cumplir con los plazos se reemplazará a dicho finalista con el siguiente concursante elegido por el jurado.
       %li Cada votante podrá ejercer su voto una vez por receta. Sólo se tomará en cuenta los votos de las recetas publicadas en facebook del banco.
-      %li La participación en este concurso implica la aceptación de todas y cada uno de estos términos y condiciones. El concursante además, otorga al BBVA Banco Continental total libertad y derechos sobre la publicación de la receta.
+      %li La participación en este concurso implica la aceptación de todas y cada uno de estos términos y condiciones. El concursante además, otorga al BBVA Continental total libertad y derechos sobre la publicación de la receta.
       %li N° de expediente: 2011-0279021
