--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -554,8 +554,8 @@ textarea#message_ingredients.text.optional {
 div.flash {
 	padding: 10px 20px;
 	margin: 20px 0px;
-	border-top: 1px solid #fcb4b3;
-	border-bottom: 1px solid #fcb4b3;
+	border-top: 1px solid #a0b1ce;
+	border-bottom: 1px solid #a0b1ce;
 	font: normal normal 12px Arial, Helvetica, Geneva, sans-serif;
 	background-color: #d8dfeb;
 	padding: 10px 10px;
