--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,8 @@
     = include_stylesheets :app
     /[if IE]
       %link{:href=>"/stylesheets/ie.css", :media=>"screen", :rel=>"stylesheet",  :type=>"text/css"}
+    /[if (lt IE9)]
+      %link{:href=>"/stylesheets/ie_old.css", :media=>"screen", :rel=>"stylesheet",  :type=>"text/css"}
     = csrf_meta_tag
   %body
     .page
