Volver a cabecera anterior

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -1231,12 +1231,12 @@ input#vote_submit.button.disabled {
   padding: 0 !important;
   width: 106px !important;
 }
-
+/*
 #header{
   overflow: hidden;
   background: url('https://dl-web.dropbox.com/get/header.png?w=42ef3d8e') no-repeat;
 }
-
+*/
 h2#contest_logo a, div#logo h1 a{
-  background:none;
+  /*background:none;*/
 }
