--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -1233,7 +1233,7 @@ input#vote_submit.button.disabled {
 }
 #header{
   overflow: hidden;
-  background: url('https://dl-web.dropbox.com/get/header.png?w=42ef3d8e') no-repeat;
+  background: url('/images/header.png') no-repeat;
 }
 div#logo{
   margin-top:0 !important;
@@ -1242,7 +1242,7 @@ div#logo{
 h2#contest_logo a{
   margin-left:250px;
   height:130px;
-  background: url('https://dl-web.dropbox.com/get/logo_concurso.png?w=b9100ea8') no-repeat;
+  background: url('/images/logo_concurso.png') no-repeat;
 }
 /*
 #header{
