--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,5 +1,7 @@
 #header
   #logo
+    %h1#bbva
+      = link_to "BBVA Continental", "http://bbvacontinental.com.pe", :target => "_blank"
     %h2#contest_logo
       = link_to "Concurso Más bueno que el Pan", root_path
   %ul
