--- a/app/views/layouts/messages_list.html.haml
+++ b/app/views/layouts/messages_list.html.haml
@@ -16,7 +16,7 @@
           / %p.alert= alert
           .main
             .content_list
-              %h1 Estas son las recetas más buenas que el pan
+              %h1#message_index Estas son las recetas más buenas que el pan
               %p.description
                 Vota por tu receta de pan favorita y ayuda a nuestro jurado a escoger a los 5 finalistas que participar&aacute;n en la Gran Final de Mistura.
               = yield
