--- a/public/assets/app.css
+++ b/public/assets/app.css
@@ -1336,3 +1336,8 @@ h2#contest_logo a{
 h2#contest_logo a, div#logo h1 a{
   background:none;
 }*/
+
+#footer a.terms_button:hover{
+  background: none;
+}
+
