Obtener access_token

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,6 +26,11 @@
         #footer
           = link_to "Términos y condiciones del concurso", terms_path, :class => "terms_button"
     %script{:src => "http://connect.facebook.net/en_US/all.js"}
+    :erb
+      <script type="text/javascript">
+        var fb_token = <%= fb_token %>;
+        console.log(fb_token);
+      </script>
     :javascript
 
       window.fbAsyncInit = function() {
